Expand wrapper if main wrapper gets adjusted width; prevent wrapper from shrinking too much

--- a/src/DateRangePicker.less
+++ b/src/DateRangePicker.less
@@ -15,6 +15,8 @@
 
   &__wrapper {
     display: flex;
+    flex-grow: 1;
+    flex-shrink: 0;
     align-items: center;
     border: thin solid gray;
   }
